cambio a form simple

--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@
 
 
 <div class="container" id = "main" >
-  <h1>Sube el doc</h1>
+  <h1>Demo</h1>
   
   
-    <progress value="0" max="100" id ="uploader">0%</progress>
-      <input type="file" name="file" id="fileButton" accept=".xlsx">
-
-    <div>
-        <button id="send" > Submit</button>
-      </div>
+    
     
 </div>
    
