--- a/index.html
+++ b/index.html
@@ -38,23 +38,7 @@
 
 
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var config = {
-    apiKey: "AIzaSyB3rxVzicY3gAoG99tz6WkB4lsMiia29YE",
-    authDomain: "test-aad01.firebaseapp.com",
-    databaseURL: "https://test-aad01.firebaseio.com",
-    projectId: "test-aad01",
-    storageBucket: "test-aad01.appspot.com",
-    messagingSenderId: "735788854897",
-    appId: "1:735788854897:web:41ee22cc35ba47417e35d0",
-    measurementId: "G-2K9KV9DS1V"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(config);
 
-</script>
 
 
 
@@ -87,11 +71,30 @@
   </div>
   <div id = "botonera">
     <button type="submit" class="btn btn-primary" id = "enviar">Enviar</button><br><br>
-    <button type="submit" class="btn btn-primary" id="mas">+</button>
-    <button type="submit" class="btn btn-primary" id="menos">--</button>
+
   </div>
-  <script src="main.js"></script>
+
+  <br>
+  <div id="preguntased"></div>
     
   </form>
-   
+  
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var config = {
+      apiKey: "AIzaSyB3rxVzicY3gAoG99tz6WkB4lsMiia29YE",
+      authDomain: "test-aad01.firebaseapp.com",
+      databaseURL: "https://test-aad01.firebaseio.com",
+      projectId: "test-aad01",
+      storageBucket: "test-aad01.appspot.com",
+      messagingSenderId: "735788854897",
+      appId: "1:735788854897:web:41ee22cc35ba47417e35d0",
+      measurementId: "G-2K9KV9DS1V"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(config);
+  
+  </script>
+  <script src="main.js"></script>
 </body>
